--- a/Doctor/MainWindow.xaml
+++ b/Doctor/MainWindow.xaml
@@ -26,7 +26,7 @@
             <RowDefinition Height="30" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#3484F5" >
+        <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#3484F5" MouseLeftButtonDown="TitleStackPanel_MouseLeftButtonDown">
             <Label x:Name="titleLabel" FontWeight="Bold"  Margin="0,0,0,0.4" HorizontalContentAlignment="Left"  Foreground="White"  FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="417">全科医生机器人辅助诊断系统</Label>
             <Button Template="{StaticResource MaxBtn}" Margin="510,0,0,0" x:Name="MaxBtn" Visibility="Collapsed"/>
             <Button Template="{StaticResource MinBtn}" Margin="540,0,0,0" x:Name="MinBtn" Click="MinBtn_Click"/>
