--- a/Doctor/DcPlan.xaml
+++ b/Doctor/DcPlan.xaml
@@ -11,10 +11,10 @@
             <RowDefinition Height="30" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#F8F8F8 " >
-            <Label x:Name="titleLabel" FontWeight="Bold"  Margin="0,0,0,0.4" HorizontalContentAlignment="Left"    FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="417">治疗方案</Label>
+        <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#3484F5" >
+            <Label x:Name="titleLabel" FontWeight="Bold" Foreground="White"  Margin="0,0,0,0.4" HorizontalContentAlignment="Left"    FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="417">治疗方案</Label>
 
-            <Button  Click="Button_Click"  Template="{StaticResource CloseWindwoBtn}" Margin="360,0,0,0" />
+            <Button  Click="Button_Click"  Template="{StaticResource CloseBtn}" Margin="350,0,0,0" />
         </StackPanel>
         <StackPanel  Grid.Row="1" Background="White">
             <StackPanel Margin="0,10,0,0" Orientation="Horizontal">                
