--- a/Doctor/Search.xaml
+++ b/Doctor/Search.xaml
@@ -5,20 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Doctor"
         mc:Ignorable="d"
-        WindowStyle="None" AllowDrop="True" ResizeMode="NoResize"   BorderThickness="0"  Height="400" Width="500" Loaded="Window_Loaded">
+        WindowStyle="None" AllowDrop="True"  ResizeMode="NoResize"   BorderThickness="2" BorderBrush="#3484F5"  Height="400" Width="500" Loaded="Window_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#F8F8F8 " >
-            <Label x:Name="titleLabel" FontWeight="Bold"  Margin="0,0,0,0.4" HorizontalContentAlignment="Left"    FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="417">增加疾病</Label>
+        <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#3484F5 " >
+            <Label x:Name="titleLabel" Foreground="White"  FontWeight="Bold"  Margin="0,0,0,0.4" HorizontalContentAlignment="Left"    FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="417">增加疾病</Label>
 
-            <Button Template="{StaticResource CloseWindwoBtn}" Margin="60,0,0,0" Click="CancelButton_Click" />
+            <Button Template="{StaticResource CloseBtn}"  Margin="60,0,0,0" Click="CancelButton_Click" />
         </StackPanel>
         <StackPanel  Grid.Row="1" Background="White" Orientation="Vertical">
             <StackPanel Height="50" Margin="0,30,0,0"  VerticalAlignment="Center" HorizontalAlignment="Left" Orientation="Horizontal">
-                <Label FontSize="16" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="120">疾病名称:</Label>
+                <Label FontSize="16"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="120">疾病名称:</Label>
                 <TextBox Height="30" Width="300" MaxLines="1" FontSize="16" VerticalContentAlignment="Center" x:Name="diseaseNameTextBox"></TextBox>
             </StackPanel>
             <Label Margin="40,10,0,0" FontSize="16"  HorizontalAlignment="Left" FontWeight="Bold" VerticalContentAlignment="Center" Width="310">常见症状:</Label>
