--- a/Doctor/YpExplain.xaml
+++ b/Doctor/YpExplain.xaml
@@ -5,17 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Doctor"
         mc:Ignorable="d"
-        WindowStyle="None" AllowDrop="True" Loaded="Window_Loaded"  ResizeMode="NoResize" MouseLeftButtonDown="Window_MouseLeftButtonDown"   BorderThickness="0"  Height="760" Width="900">
+        WindowStyle="None" AllowDrop="True" Loaded="Window_Loaded"  ResizeMode="NoResize" MouseLeftButtonDown="Window_MouseLeftButtonDown"   BorderThickness="2" BorderBrush="#3484F5"  Height="760" Width="900">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
             <RowDefinition Height="20" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#F8F8F8 " >
-            <Label x:Name="titleLabel" FontWeight="Bold"  Margin="16,0,0,0" HorizontalContentAlignment="Left"    FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="417">药品说明</Label>
+        <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#3484F5" >
+            <Label x:Name="titleLabel" FontWeight="Bold" Foreground="White"  Margin="16,0,0,0" HorizontalContentAlignment="Left"    FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="417">药品说明</Label>
 
-            <Button  Click="Button_Click"  Template="{StaticResource CloseWindwoBtn}" Margin="440,0,0,0" />
+            <Button  Click="Button_Click"  Template="{StaticResource CloseBtn}" Margin="440,0,0,0" />
         </StackPanel>
         <ScrollViewer  Grid.Row="2" >
             <Grid>
